vagrant/nginx_ingress/mytest1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytest1-service
  namespace: mytest1
  labels:
    app: mytest1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: mytest1
