vagrant/nginx_ingress/mytest2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytest2-service
  namespace: mytest2
  labels:
    app: mytest2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: mytest2
