vagrant/nginx_ingress/mytest3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytest3-service
  namespace: mytest3
  labels:
    app: mytest3
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: mytest3
